--- a/conf.properties
+++ b/conf.properties
@@ -1,13 +1,19 @@
-#Update 'port1' value
-#Mon May 19 15:10:56 CST 2014
-server_amount=3
-name18=test3
+#Update 'port41' value
+#Wed May 21 14:48:43 CST 2014
+server_amount=5
+host39=localhost
+host41=localhost
+host40=localhost
 name20=testtest
 host1=localhost
 name1=localhost
+name39=ds
 port1=6379
-server_maxid=31
+name41=dfsf
+name40=sd
+server_maxid=41
 port20=88888
-port18=6379
+port39=6379
+port41=6380
+port40=6379
 host20=localhost
-host18=localhost
