fix rename key bug

--- a/conf.properties
+++ b/conf.properties
@@ -1,19 +1,10 @@
-#Update 'port41' value
-#Wed May 21 14:48:43 CST 2014
-server_amount=5
-host39=localhost
-host41=localhost
-host40=localhost
-name20=testtest
+#Update 'server_amount' value
+#Fri May 23 11:12:40 CST 2014
+server_amount=2
 host1=localhost
-name1=localhost
-name39=ds
-port1=6379
-name41=dfsf
-name40=sd
-server_maxid=41
-port20=88888
-port39=6379
-port41=6380
-port40=6379
+name20=testtest
 host20=localhost
+server_maxid=46
+name1=localhost
+port20=88888
+port1=6379
