redis multi version support

--- a/conf.properties
+++ b/conf.properties
@@ -1,10 +1,13 @@
-#Update 'server_amount' value
-#Fri May 23 11:12:40 CST 2014
-server_amount=2
+#Update 'port47' value
+#Mon May 26 16:18:18 CST 2014
+server_amount=3
+name20=test
+name47=local 2.8.9
 host1=localhost
-name20=testtest
-host20=localhost
-server_maxid=46
-name1=localhost
-port20=88888
+name1=local 2.6.12
 port1=6379
+server_maxid=47
+port47=6380
+port20=88888
+host20=localhost
+host47=localhost
