fix multi redis version support bug

--- a/conf.properties
+++ b/conf.properties
@@ -1,12 +1,12 @@
-#Update 'port47' value
-#Mon May 26 16:18:18 CST 2014
+#Update 'server_amount' value
+#Mon May 26 16:58:42 CST 2014
 server_amount=3
 name20=test
 name47=local 2.8.9
 host1=localhost
 name1=local 2.6.12
 port1=6379
-server_maxid=47
+server_maxid=52
 port47=6380
 port20=88888
 host20=localhost
