--- a/conf.properties
+++ b/conf.properties
@@ -1,13 +1,22 @@
-#Update 'server_amount' value
-#Mon May 26 16:58:42 CST 2014
-server_amount=3
-name20=test
-name47=local 2.8.9
-host1=localhost
-name1=local 2.6.12
+#Update 'server_maxid' value
+#Tue May 27 16:06:51 CST 2014
+server_amount=2
+port2=6380
 port1=6379
-server_maxid=52
-port47=6380
-port20=88888
-host20=localhost
-host47=localhost
+favorite_maxid=7
+favorite7=local 2.6.12\:db0\:key\:
+favorite5=local 2.6.12\:db0\:com\:
+server_maxid=2
+favorite4=local 2.6.12\:db0\:Login\:
+favorite2=local 2.6.12\:db0\:com\:
+favorite1=local 2.6.12\:db0\:Login\:
+host2=localhost
+host1=localhost
+favorite_server7=1
+favorite_amount=5
+favorite_server5=1
+favorite_server4=1
+favorite_server2=1
+favorite_server1=1
+name2=local 2.8
+name1=local 2.6
