--- a/conf.properties
+++ b/conf.properties
@@ -1,22 +1,24 @@
-#Update 'server_maxid' value
-#Tue May 27 16:06:51 CST 2014
+#Update 'favorite_maxid' value
+#Wed May 28 15:07:41 CST 2014
 server_amount=2
 port2=6380
 port1=6379
-favorite_maxid=7
-favorite7=local 2.6.12\:db0\:key\:
-favorite5=local 2.6.12\:db0\:com\:
-server_maxid=2
-favorite4=local 2.6.12\:db0\:Login\:
-favorite2=local 2.6.12\:db0\:com\:
-favorite1=local 2.6.12\:db0\:Login\:
+favorite_maxid=6
+favorite6=local 2.6\:db4\:com\:
+favorite_name6=COM4
+favorite5=local 2.8\:db0\:sns\:post\:3\:
+favorite_name5=post3
+server_maxid=3
+favorite_name4=test
+favorite3=local2.6\:db0\:sns\:user\:3\:
+favorite_name3=user3
+favorite_name2=local2.6\:db0\:
+favorite_name1=local 2.6\:db1\:
 host2=localhost
 host1=localhost
-favorite_server7=1
-favorite_amount=5
-favorite_server5=1
-favorite_server4=1
-favorite_server2=1
-favorite_server1=1
+favorite_server6=1
+favorite_amount=3
+favorite_server5=2
+favorite_server3=1
 name2=local 2.8
 name1=local 2.6
