finish new list

--- a/conf.properties
+++ b/conf.properties
@@ -1,14 +1,13 @@
-#Update 'favorite_name10' value
-#Thu May 29 15:35:16 CST 2014
+#Update 'favorite_maxid' value
+#Fri May 30 12:58:38 CST 2014
 favorite_server10=1
 server_amount=2
 port2=6380
 port1=6379
-favorite_maxid=10
+favorite_maxid=12
 favorite_name9=POST4
 favorite_name8=POST
 favorite_name7=DB0
-favorite6=local 2.6\:db4\:com\:
 favorite_name6=COM4
 favorite_name5=POST3
 server_maxid=3
@@ -17,12 +16,17 @@ favorite3=local2.6\:db0\:sns\:user\:3\:
 favorite_name3=USER3
 favorite_name2=local2.6\:db0\:
 favorite_name1=local 2.6\:db1\:
+favorite_name12=COM4
+favorite_name11=POST4
 favorite_name10=DB1
+favorite12=local 2.6\:db4\:COM\:
+favorite11=local 2.8\:db0\:sns\:post\:4\:
 favorite10=local 2.6\:db1\:
 host2=localhost
 host1=localhost
-favorite_server6=1
-favorite_amount=3
+favorite_amount=4
 favorite_server3=1
 name2=local 2.8
 name1=local 2.6
+favorite_server12=1
+favorite_server11=2
