--- a/conf.properties
+++ b/conf.properties
@@ -1,32 +1,35 @@
 #Update 'favorite_maxid' value
-#Fri May 30 12:58:38 CST 2014
+#Tue Jun 03 14:21:12 CST 2014
 favorite_server10=1
+port6=6380
+port5=6379
 server_amount=2
-port2=6380
-port1=6379
-favorite_maxid=12
+favorite_maxid=13
 favorite_name9=POST4
 favorite_name8=POST
 favorite_name7=DB0
 favorite_name6=COM4
 favorite_name5=POST3
-server_maxid=3
+server_maxid=6
 favorite_name4=test
 favorite3=local2.6\:db0\:sns\:user\:3\:
 favorite_name3=USER3
 favorite_name2=local2.6\:db0\:
 favorite_name1=local 2.6\:db1\:
+favorite_name13=ken thompson
 favorite_name12=COM4
 favorite_name11=POST4
 favorite_name10=DB1
+favorite13=local 2.6\:db0\:Login\:ken thompson\:
+host6=localhost
 favorite12=local 2.6\:db4\:COM\:
+host5=localhost
 favorite11=local 2.8\:db0\:sns\:post\:4\:
 favorite10=local 2.6\:db1\:
-host2=localhost
-host1=localhost
-favorite_amount=4
+favorite_amount=5
+name6=local 2.8
+name5=local 2.6
 favorite_server3=1
-name2=local 2.8
-name1=local 2.6
+favorite_server13=5
 favorite_server12=1
 favorite_server11=2
