--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>jedis</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
