support multiple language

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -22,7 +22,7 @@ LIST.English = List
 LIST.Chinese = \u5217\u8868
 SET.English = Set
 SET.Chinese = \u96C6\u5408
-ZSET.English = Sorted Set
+ZSET.English = Sorted set
 ZSET.Chinese = \u6709\u5E8F\u96C6\u5408
 HASH.English = Hash
 HASH.Chinese = \u54C8\u5E0C\u8868
