--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -283,4 +283,20 @@ SETEXIST.Chinese = \u952E\u5DF2\u5B58\u5728\uFF0C\u800C\u4E14\u7C7B\u578B\u4E0D\
 ZSETEXIST.English = Key exist, and type is not sorted set: 
 ZSETEXIST.Chinese = \u952E\u5DF2\u5B58\u5728\uFF0C\u800C\u4E14\u7C7B\u578B\u4E0D\u662F\u6709\u5E8F\u96C6\u5408\uFF1A
 KEYNOTEXIST.English = Key not exist: 
-KEYNOTEXIST.Chinese = \u952E\u4E0D\u5B58\u5728\uFF1A   
+KEYNOTEXIST.Chinese = \u952E\u4E0D\u5B58\u5728\uFF1A
+STAR.English = Star:
+STAR.Chinese = \u70B9\u8D5E\uFF1A
+TTL.English = TTL
+TTL.Chinese = \u751F\u5B58\u65F6\u95F4
+EXPIRE.English = Expire
+EXPIRE.Chinese = \u8FC7\u671F
+TTLS.English = TTL(s)
+TTLS.Chinese = \u751F\u5B58\u65F6\u95F4\uFF08\u79D2\uFF09
+TTLEXCEPTION.English = TTL must be unsigned integer
+TTLEXCEPTION.Chinese = \u751F\u5B58\u65F6\u95F4\u5FC5\u987B\u662F\u6B63\u6574\u6570
+APPLY.English = Apply
+APPLY.Chinese = \u5E94\u7528
+APPLYTTL.English = Apply TTL
+APPLYTTL.Chinese = \u5E94\u7528\u751F\u5B58\u65F6\u95F4
+APPLYTTLEXCEPTION.English = TTL information is not applied,Are you sure not apply TTL information?
+APPLYTTLEXCEPTION.Chinese = \u751F\u5B58\u65F6\u95F4\u4FE1\u606F\u8FD8\u672A\u5E94\u7528\uFF0C\u662F\u5426\u4E0D\u5E94\u7528\u751F\u5B58\u65F6\u95F4\u4FE1\u606F\uFF1F
