huge commit, adjuest the UI update the string property, hash property, list property, set property, zset property adjust the menu, add view menu

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -146,9 +146,42 @@ OK.English = OK
 OK.Chinese = \u786E\u8BA4
 DONATIONMESSAGE.English = If you find this software useful and would like to support it, you can do so simply by scanning my Alipay two-dimension code and donating whatever you like.
 DONATIONMESSAGE.Chinese = \u5982\u679C\u60A8\u89C9\u5F97\u8FD9\u4E2A\u8F6F\u4EF6\u6709\u7528\uFF0C\u613F\u610F\u652F\u6301\u5B83\u7EE7\u7EED\u53D1\u5C55\uFF0C\u60A8\u53EF\u4EE5\u626B\u63CF\u6211\u7684\u652F\u4ED8\u5B9D\u4E8C\u7EF4\u7801\uFF0C\u60A8\u7684\u6350\u52A9\u662F\u6211\u7EE7\u7EED\u5F00\u53D1\u7684\u52A8\u529B\u3002
-
-
-
+REDISDATAEXPLORER.English = Redis data explorer
+REDISDATAEXPLORER.Chinese = Redis\u6570\u636E\u6D4F\u89C8\u5668
+ORDER.English = Order
+ORDER.Chinese = \u987A\u5E8F
+ORDERBY.English = Order by
+ORDERBY.Chinese = \u6392\u5E8F
+ASCEND.English = Ascend
+ASCEND.Chinese = \u5347\u5E8F
+DESCEND.English = Descend
+DESCEND.Chinese = \u964D\u5E8F
+LANGUAGE.English = Language
+LANGUAGE.Chinese = \u8BED\u8A00
+UPDATEFIELD.English = Field exist, are you sure overwritten this field?
+UPDATEFIELD.Chinese = \u57DF\u5DF2\u5B58\u5728\uFF0C\u662F\u5426\u8986\u76D6\u8BE5\u57DF\uFF1F
+DELETEHASH.English = Are you sure delete hash data?
+DELETEHASH.Chinese = \u662F\u5426\u5220\u9664\u54C8\u5E0C\u8868\u6570\u636E\uFF1F
+INSERTHEAD.English = Insert head
+INSERTHEAD.Chinese = \u63D2\u5165\u5934
+APPENDTAIL.English = Append tail
+APPENDTAIL.Chinese = \u6DFB\u52A0\u5C3E
+DELETEHEAD.English = Delete head
+DELETEHEAD.Chinese = \u5220\u9664\u5934
+DELETETAIL.English = Delete tail
+DELETETAIL.Chinese = \u5220\u9664\u5C3E
+EDITING.English = Editing
+EDITING.Chinese = \u7F16\u8F91\u4E2D
+EDITINGERROR.English = Editing, please click apply or cancel.
+EDITINGERROR.Chinese = \u6B63\u5728\u7F16\u8F91\u4E2D\uFF0C\u8BF7\u70B9\u5E94\u7528\u6216\u53D6\u6D88\u3002
+ADDSETVALUES.English = Value was already a member of the set
+ADDSETVALUES.Chinese = \u8F93\u5165\u503C\u5DF2\u7ECF\u662F\u96C6\u5408\u7684\u6210\u5458
+APPLYERROR.English = Data is not saved, please check if save the data and/or TTL?
+APPLYERROR.Chinese = \u6570\u636E\u8FD8\u672A\u4FDD\u5B58\uFF0C\u8BF7\u68C0\u67E5\u662F\u5426\u4FDD\u5B58\u6570\u636E\u4FE1\u606F\u548C\u751F\u5B58\u65F6\u95F4\u4FE1\u606F\uFF1F
+CLOSEAPP.English = Close application
+CLOSEAPP.Chinese = \u5173\u95ED\u5E94\u7528
+CLOSEAPPERROR.English = You are editing the data.\nClose the application will lose the editing data.\nAre you sure close the application?
+CLOSEAPPERROR.Chinese = \u6B63\u5728\u7F16\u8F91\u7684\u6570\u636E\u8FD8\u6CA1\u6709\u63D0\u4EA4\u3002\n\u5173\u95ED\u5E94\u7528\u5C06\u4E22\u5931\u6570\u636E\u3002\n\u662F\u5426\u5173\u95ED\u5E94\u7528\uFF1F
 #dialog message
 ADDFAVORITE.English = Add favorite
 ADDFAVORITE.Chinese = \u6DFB\u52A0\u6536\u85CF
@@ -174,6 +207,8 @@ INPUTVALUES.English = Input values
 INPUTVALUES.Chinese = \u8F93\u5165\u503C
 HASHINPUTFORMAT.English = Values(multiple values are separated by ; field and value are separated by ,)
 HASHINPUTFORMAT.Chinese = \u503C\uFF08\u591A\u4E2A\u503C\u7531\uFF1B\u5206\u5272\uFF0C\u57DF\u548C\u503C\u7531\uFF0C\u5206\u5272\uFF09
+INPUTKEY.English = Please input key name!
+INPUTKEY.Chinese = \u8BF7\u8F93\u5165\u952E\u540D\uFF01
 INPUTHASH.English = Please input hash information!
 INPUTHASH.Chinese = \u8BF7\u8F93\u5165\u54C8\u5E0C\u8868\u4FE1\u606F\uFF01
 KEYENDERROR.English = Key name can't end with 
@@ -272,7 +307,8 @@ ZSETPROPERTY.English = Sorted set properties
 ZSETPROPERTY.Chinese = \u6709\u5E8F\u96C6\u5408\u5C5E\u6027
 INPUTZSET.English = Please input sorted set information!
 INPUTZSET.Chinese = \u8BF7\u8F93\u5165\u6709\u5E8F\u96C6\u5408\u4FE1\u606F\uFF01
-
+SCOREERROR.English = Score must be double: 
+SCOREERROR.Chinese = \u5206\u503C\u5FC5\u987B\u662F\u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\uFF1A
 #interation message
 HASHEXIST.English = Key exist, and type is not hash: 
 HASHEXIST.Chinese = \u952E\u5DF2\u5B58\u5728\uFF0C\u800C\u4E14\u7C7B\u578B\u4E0D\u662F\u54C8\u5E0C\u8868\uFF1A
