fix data content refresh bug

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -318,8 +318,8 @@ SETEXIST.English = Key exist, and type is not set:
 SETEXIST.Chinese = \u952E\u5DF2\u5B58\u5728\uFF0C\u800C\u4E14\u7C7B\u578B\u4E0D\u662F\u96C6\u5408\uFF1A
 ZSETEXIST.English = Key exist, and type is not sorted set: 
 ZSETEXIST.Chinese = \u952E\u5DF2\u5B58\u5728\uFF0C\u800C\u4E14\u7C7B\u578B\u4E0D\u662F\u6709\u5E8F\u96C6\u5408\uFF1A
-KEYNOTEXIST.English = Key not exist: 
-KEYNOTEXIST.Chinese = \u952E\u4E0D\u5B58\u5728\uFF1A
+KEYNOTEXIST.English = Key not exist 
+KEYNOTEXIST.Chinese = \u952E\u4E0D\u5B58\u5728
 STAR.English = Star:
 STAR.Chinese = \u70B9\u8D5E\uFF1A
 TTL.English = TTL
