--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -182,6 +182,29 @@ CLOSEAPP.English = Close application
 CLOSEAPP.Chinese = \u5173\u95ED\u5E94\u7528
 CLOSEAPPERROR.English = You are editing the data.\nClose the application will lose the editing data.\nAre you sure close the application?
 CLOSEAPPERROR.Chinese = \u6B63\u5728\u7F16\u8F91\u7684\u6570\u636E\u8FD8\u6CA1\u6709\u63D0\u4EA4\u3002\n\u5173\u95ED\u5E94\u7528\u5C06\u4E22\u5931\u6570\u636E\u3002\n\u662F\u5426\u5173\u95ED\u5E94\u7528\uFF1F
+TOOL.English = Tools
+TOOL.Chinese = \u5DE5\u5177
+CONSOLE.English = Console
+CONSOLE.Chinese = \u63A7\u5236\u53F0
+COMMAND.English = Command
+COMMAND.Chinese = \u547D\u4EE4
+TIME.English = Time
+TIME.Chinese = \u65F6\u95F4
+DURATION.English = Duration
+DURATION.Chinese = \u65F6\u957F
+RESULT.English = Result
+RESULT.Chinese = \u7ED3\u679C
+CONSOLECLOSED.English = Console will be closed after execute the quit command, are you sure execute the quit command?
+CONSOLECLOSED.Chinese = \u6267\u884Cquit\u547D\u4EE4\u540E\uFF0C\u63A7\u5236\u53F0\u5C06\u5173\u95ED\uFF0C\u662F\u5426\u6267\u884Cquit\u547D\u4EE4\uFF1F
+QUITCONSOLE.English = Quit console
+QUITCONSOLE.Chinese = \u9000\u51FA\u63A7\u5236\u53F0
+RUNCURRENT.English = Run current
+RUNCURRENT.Chinese = \u8FD0\u884C\u5F53\u524D
+RUNSELECT.English = Run selected
+RUNSELECT.Chinese = \u8FD0\u884C\u9009\u4E2D
+RUNFOLLOW.English = Run following
+RUNFOLLOW.Chinese = \u8FD0\u884C\u4E0B\u9762
+
 #dialog message
 ADDFAVORITE.English = Add favorite
 ADDFAVORITE.Chinese = \u6DFB\u52A0\u6536\u85CF
