add console execute accelerator

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -204,6 +204,12 @@ RUNSELECT.English = Run selected
 RUNSELECT.Chinese = \u8FD0\u884C\u9009\u4E2D
 RUNFOLLOW.English = Run following
 RUNFOLLOW.Chinese = \u8FD0\u884C\u4E0B\u9762
+RUNCURRENTTIP.English = Run current command
+RUNCURRENTTIP.Chinese = \u8FD0\u884C\u5F53\u524D\u547D\u4EE4
+RUNSELECTTIP.English = Run selected command
+RUNSELECTTIP.Chinese = \u8FD0\u884C\u9009\u4E2D\u7684\u547D\u4EE4
+RUNFOLLOWTIP.English = Run all command from cursor
+RUNFOLLOWTIP.Chinese = \u8FD0\u884C\u5149\u6807\u4EE5\u4E0B\u6240\u6709\u547D\u4EE4
 
 #dialog message
 ADDFAVORITE.English = Add favorite
