add console menu

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -210,6 +210,10 @@ RUNSELECTTIP.English = Run selected command
 RUNSELECTTIP.Chinese = \u8FD0\u884C\u9009\u4E2D\u7684\u547D\u4EE4
 RUNFOLLOWTIP.English = Run all command from cursor
 RUNFOLLOWTIP.Chinese = \u8FD0\u884C\u5149\u6807\u4EE5\u4E0B\u6240\u6709\u547D\u4EE4
+SELECTALL.English = Select all
+SELECTALL.Chinese = \u5168\u9009
+CLEAR.English = Clear
+CLEAR.Chinese = \u6E05\u9664
 
 #dialog message
 ADDFAVORITE.English = Add favorite
