prompt version is too low to support function

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -214,6 +214,8 @@ SELECTALL.English = Select all
 SELECTALL.Chinese = \u5168\u9009
 CLEAR.English = Clear
 CLEAR.Chinese = \u6E05\u9664
+VERSIONNOTSUPPORT.English = The version of redis server is too low to support this function.
+VERSIONNOTSUPPORT.Chinese = Redis\u670D\u52A1\u5668\u7248\u672C\u4F4E\uFF0C\u4E0D\u652F\u6301\u672C\u529F\u80FD\u3002
 
 #dialog message
 ADDFAVORITE.English = Add favorite
