--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -224,6 +224,22 @@ MESSAGE.English = Message
 MESSAGE.Chinese = \u6D88\u606F
 CHANNEL.English = Channel
 CHANNEL.Chinese = \u901A\u9053
+OPTIONS.English = Options
+OPTIONS.Chinese = \u9009\u9879
+CONNECTION.English = Connection timeout
+CONNECTION.Chinese = \u8FDE\u63A5\u8D85\u65F6
+NAMESPACE.English = Name space
+NAMESPACE.Chinese = \u547D\u540D\u7A7A\u95F4
+PAGING.English = Paging
+PAGING.Chinese = \u7FFB\u9875
+COMMANDTIMEOUT.English = Command connection timeout(ms)
+COMMANDTIMEOUT.Chinese = \u547D\u4EE4\u8FDE\u63A5\u8D85\u65F6\uFF08\u6BEB\u79D2\uFF09
+CONSOLETIMEOUT.English = Console connection timeout(ms)
+CONSOLETIMEOUT.Chinese = \u63A7\u5236\u53F0\u8FDE\u63A5\u8D85\u65F6\uFF08\u6BEB\u79D2\uFF09
+SEPARATOR.English = Namespace separator
+SEPARATOR.Chinese = \u547D\u540D\u7A7A\u95F4\u5206\u9694\u7B26
+PAGESIZE.English = Page size
+PAGESIZE.Chinese = \u9875\u5927\u5C0F
 
 #dialog message
 ADDFAVORITE.English = Add favorite
@@ -373,6 +389,10 @@ TTLS.English = TTL(s)
 TTLS.Chinese = \u751F\u5B58\u65F6\u95F4\uFF08\u79D2\uFF09
 TTLEXCEPTION.English = TTL must be unsigned integer
 TTLEXCEPTION.Chinese = \u751F\u5B58\u65F6\u95F4\u5FC5\u987B\u662F\u6B63\u6574\u6570
+TIMEEXCEPTION.English = Time must be unsigned integer
+TIMEEXCEPTION.Chinese = \u65F6\u95F4\u5FC5\u987B\u662F\u6B63\u6574\u6570
+SIZEEXCEPTION.English = Page size must be unsigned integer
+SIZEEXCEPTION.Chinese = \u9875\u5927\u5C0F\u5FC5\u987B\u662F\u6B63\u6574\u6570
 APPLY.English = Apply
 APPLY.Chinese = \u5E94\u7528
 APPLYTTL.English = Apply TTL
