--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -399,3 +399,5 @@ APPLYTTL.English = Apply TTL
 APPLYTTL.Chinese = \u5E94\u7528\u751F\u5B58\u65F6\u95F4
 APPLYTTLEXCEPTION.English = TTL information is not applied,Are you sure not apply TTL information?
 APPLYTTLEXCEPTION.Chinese = \u751F\u5B58\u65F6\u95F4\u4FE1\u606F\u8FD8\u672A\u5E94\u7528\uFF0C\u662F\u5426\u4E0D\u5E94\u7528\u751F\u5B58\u65F6\u95F4\u4FE1\u606F\uFF1F
+CMDEXCEPTION.English = Command exception, can't find another quotation mark
+CMDEXCEPTION.Chinese = \u547D\u4EE4\u5F02\u5E38\uFF0C\u627E\u4E0D\u5230\u53E6\u4E00\u4E2A\u5F15\u53F7
