--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -240,6 +240,10 @@ SEPARATOR.English = Namespace separator
 SEPARATOR.Chinese = \u547D\u540D\u7A7A\u95F4\u5206\u9694\u7B26
 PAGESIZE.English = Page size
 PAGESIZE.Chinese = \u9875\u5927\u5C0F
+WATCH.English = Watch
+WATCH.Chinese = \u67E5\u770B
+DATAWATCHER.English = Data watcher
+DATAWATCHER.Chinese = \u6570\u636E\u67E5\u770B\u5668
 
 #dialog message
 ADDFAVORITE.English = Add favorite
