--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -244,6 +244,26 @@ WATCH.English = Watch
 WATCH.Chinese = \u67E5\u770B
 DATAWATCHER.English = Data watcher
 DATAWATCHER.Chinese = \u6570\u636E\u67E5\u770B\u5668
+DATATYPE.English = Data type
+DATATYPE.Chinese = \u6570\u636E\u7C7B\u578B
+TEXT.English = Text
+TEXT.Chinese = \u6587\u672C
+PLAINTEXT.English = Plain text
+PLAINTEXT.Chinese = \u666E\u901A\u6587\u672C
+IMAGE.English = Image
+IMAGE.Chinese = \u56FE\u7247
+BASE64IMAGE.English = Base64 image
+BASE64IMAGE.Chinese = Base64\u56FE\u7247
+JSON.English = Json
+JSON.Chinese = Json
+XML.English = Xml
+XML.Chinese = Xml
+IMAGEEXCEPTION.English = Image format error(only support JPEG, GIF, BMP, ICO, PNG, TIFF)
+IMAGEEXCEPTION.Chinese = \u56FE\u7247\u683C\u5F0F\u9519\u8BEF\uFF08\u53EA\u652F\u6301JPEG, GIF, BMP, ICO, PNG, TIFF\uFF09
+JSONEXCEPTION.English = Json format error
+JSONEXCEPTION.Chinese = Json\u683C\u5F0F\u9519\u8BEF
+XMLEXCEPTION.English = Xml format error
+XMLEXCEPTION.Chinese = Xml\u683C\u5F0F\u9519\u8BEF
 
 #dialog message
 ADDFAVORITE.English = Add favorite
