object information tab

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -264,7 +264,14 @@ JSONEXCEPTION.English = Json format error
 JSONEXCEPTION.Chinese = Json\u683C\u5F0F\u9519\u8BEF
 XMLEXCEPTION.English = Xml format error
 XMLEXCEPTION.Chinese = Xml\u683C\u5F0F\u9519\u8BEF
-
+OBJECT.English = Object
+OBJECT.Chinese = \u5BF9\u8C61
+REFCOUNT.English = Refcount
+REFCOUNT.Chinese = \u5F15\u7528\u8BA1\u6570
+ENCODING.English = Encoding
+ENCODING.Chinese = \u7F16\u7801
+IDLETIME.English = Idle time
+IDLETIME.Chinese = \u7A7A\u95F2\u65F6\u95F4
 #dialog message
 ADDFAVORITE.English = Add favorite
 ADDFAVORITE.Chinese = \u6DFB\u52A0\u6536\u85CF
